--- a/styles/styles.css
+++ b/styles/styles.css
@@ -23,7 +23,6 @@ header {
     flex-direction: column;
 
     font-family: var(--fuenteHeading);
-    background-color: var(--fondo-header);
     color: var(--blanco);
 }
 
@@ -34,14 +33,15 @@ header h1 {
     border-left: 1px solid var(--blanco);
     border-top: 1px solid var(--blanco);
     border-right: 1px solid var(--blanco);
+
+    background-color: var(--fondo-header);
 }
 
+/* NAV STYLE */
 header nav {
     display: flex;
     justify-content: space-around;
-}
-
-header nav a {
+} header nav a {
     padding: 0.5rem;
     width: 100%;
     
@@ -50,15 +50,16 @@ header nav a {
     text-align: center;
     text-decoration: none;
     color: var(--blanco);
-}
-
-header nav .main {
+} header nav .main {
     border-top: 0;
     border-bottom: 2px solid var(--blanco);
-}
-
-header nav .sec {
+    background-color: var(--fondo-header);
+} header nav .sec {
     background-color: var(--fondo-header-sec);
+} header nav :first-child {
+    border-bottom-left-radius: 10px;
+} header nav :last-child {
+    border-bottom-right-radius: 10px;
 }
 
 body {
