--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,8 +2,9 @@
     --fuenteHeading: 'Courier New', Courier, monospace;
     --fuenteParrafos: 'Courier New', Courier, monospace;
 
-    --fondo-body: #868686;
+    --fondo-body: #ececec;
     --fondo-body-sec: #232323;
+    --fondo-main: #1a1a1a;
     --fondo-header: #232323;
     --fondo-header-sec: #1a1a1a;
 
@@ -41,8 +42,8 @@ header {
     font-size: 2.5rem;
     letter-spacing: 0.3rem;
 
-    border-left: 2px solid var(--negro);
-    border-right: 2px solid var(--negro);
+    border-left: 2px solid var(--fondo-header);
+    border-right: 2px solid var(--fondo-header);
 
     background-color: var(--fondo-header);
 }
@@ -74,21 +75,30 @@ header nav {
     border-bottom: 2px solid var(--negro);
     border-right: 2px solid var(--negro);
 } header nav .main {
-    border: 2px solid var(--blanco);
+    border: 2px solid var(--fondo-header);
     background-color: var(--fondo-header);
 } header nav a:hover {
     border: 2px solid var(--blanco-sec);
 }
 
+/* ESTILO BODY */
 body {
     font-family: var(--fuenteParrafos);
     font-size: 1.6rem;
     line-height: 2;
 
     background-color: var(--fondo-body);
-} body #first {
+} 
+
+/* ESTILO MAIN */
+body #first {
     margin-top: 15rem;
 } body main {
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
     margin: 4rem;
     height: 60rem;
 
@@ -97,8 +107,18 @@ body {
 
     color: var(--blanco);
     background-color: var(--fondo-body-sec);
-} body main p {
-    padding: 2rem;
+} body main div {
+    height: 96%;
+    width: 49%;
+    margin: 1rem;
+
+    border-radius: 0.8rem;
+    border: 1px solid var(--blanco);
+} body main div:nth-child(1){
+    background-color: var(--fondo-main);
+} body main div:nth-child(2){
+    background-color: var(--blanco);
+    color: var(--negro);
 }
 
 
